# TRABAJO-PROFESIONAL-7599-

./: .gitignore  README.md  analisis.ipynb  exploring1.ipynb  exploring3days.ipynb  graph_metrics.ipynb  graph_metrics_cliques.ipynb  hdbscan-0.8.33-cp310-cp310-linux_x86_64.whl  history.txt  init.sh  joiner.py  main.py  main_data_real.py  mejoras.txt  metric_maker.py  plot_all_metrics.py  pyproject.toml  query_3_days.sql  query_grouped.sql  split.ipynb
.ipynb_checkpoints/: exploring3days-checkpoint.ipynb
analysis/: 00 - Transaction count.ipynb  00_Transaction_count.ipynb  00_Transaction_count_spanish.ipynb  01_Embedding_size.ipynb
clustering/: prueba.ipynb  prueba.py
clustering/embedders/: Generator.py  custom_embedder.ipynb  processing_frames.py
clustering/hdbscan/: hdbscan_plot.py  notebook.ipynb  notebook_custom.ipynb  notebook_n2v.ipynb
clustering/kmeans/: kmeans_plot.py
clustering/louvain/: louvain.py
community_detectors/: infomap.ipynb
config/: config.ini
embeddings/: embeddings_analysis.ipynb
embeddings/16-dim/: embeddings_analysis-2023.ipynb
fake_graph/: Fake_graph.py  fake_graph.ipynb
informe/: template.aux  template.bbl  template.blg  template.fdb_latexmk  template.fls  template.out  template.tex
informe/informev2/: informe.aux  informe.blg  informe.fdb_latexmk  informe.fls  informe.out  (+1 more)
logger/: logger.py
metrics/: analisis.ipynb  graph_metrics.ipynb  joiner.py  metric_maker.py
queries/: 00 - Transaction count.sql  01 - Old transactions sample.sql
utils/: file_management.py  time.py
vs_embedders/: executor.py  vs.py
(+6 files in other folders)
