[tool.poetry]
name = "pow a pos"
version = "0.1.0"
description = ""
authors = ["argelignacio <iargel@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
networkx = "^3.2.1"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
