[tool.poetry]
name = "pow a pos"
version = "0.1.0"
description = ""
authors = ["argelignacio <iargel@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
networkx = "2.8.8" 
matplotlib = "^3.8.2"
gensim = "^4.3.2"
node2vec = "^0.4.6"
ipykernel = "^6.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
