[tool.poetry]
name = "pow a pos"
version = "0.1.0"
description = ""
authors = ["argelignacio <iargel@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.2.0"
networkx = "2.8.8" 
matplotlib = "^3.8.2"
gensim = "^4.3.2"
node2vec = "^0.4.6"
ipykernel = "^6.29.0"
umap-learn = "^0.5.5"
datashader = "^0.16.0"
bokeh = "^3.3.3"
holoviews = "^1.18.1"
scikit-image = "^0.22.0"
colorcet = "^3.0.1"
tensorflow = {version = "2.14.0", extras = ["and-cuda"]}
hdbscan = "^0.8.33"
cdlib = "*"
infomap = "2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
